--- a/package.json
+++ b/package.json
@@ -58,17 +58,17 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
-    "@types/node": "^10.9.4",
+    "@types/node": "^10.11.3",
     "benchmark": "^2.1.4",
     "concurrently": "^4.0.1",
-    "google-closure-compiler": "20180805.0.0",
-    "jest": "^23.5.0",
-    "rollup": "^0.65.2",
+    "google-closure-compiler": "^20180910.1.0",
+    "jest": "^23.6.0",
+    "rollup": "^0.66.3",
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "ts-jest": "^23.10.0-beta.5",
+    "ts-jest": "^23.10.3",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.1"
   },
   "keywords": [
     "tld",
