--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tldts",
   "description": "Library to work against complex domain names, subdomains and URIs.",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "homepage": "https://github.com/remusao/tldts",
   "author": "Rémi Berson",
   "contributors": [
@@ -57,6 +57,7 @@
     "punycode": "^2.1.1"
   },
   "devDependencies": {
+    "@mozillasecurity/octo": "^2.0.0",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.3",
     "benchmark": "^2.1.4",
