Implement experimental probabilistic packed suffix structure
* Implement packed hash probabilistic structure for more compact
  representation and faster lookups. See ./bin/builders/hashes.js for more
  details about how it works.
* Create second bundle (tldts-experimental) making use of this new implementation
* Simplify hostname validation and remove strict IDNA checks
* Move lookup implementations into 'lookup' sub-folder
* Move compiled data into 'lookup/data' sub-folder
* Refactor suffix list parsing out of builders
* Handle IDNA hostnames at build-time instead of runtime (by indexing
  some suffixes multiple times: once puny-coded and once in unicode form)

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     },
     "rules": {
         "no-console": "off",
-        "no-continue": "off"
+        "no-continue": "off",
+        "indent": "off",
+        "operator-linebreak": "off",
+        "no-bitwise": "off"
     }
 }
