--- a/package.json
+++ b/package.json
@@ -35,35 +35,29 @@
     "prebuild": "npm run clean",
     "bundle": "rollup -c rollup.config.js",
     "prebundle": "npm run build",
-    "minify": "google-closure-compiler --js=./dist/tldts.umd.js --js_output_file=./dist/tldts.umd.min.js",
+    "minify": "google-closure-compiler --js=./dist/tldts.umd.js --js_output_file=./dist/tldts.umd.min.js && google-closure-compiler --js=./dist/tldts-experimental.umd.js --js_output_file=./dist/tldts-experimental.umd.min.js",
     "preminify": "npm run bundle",
     "prepack": "npm run minify",
     "test": "jest --coverage --no-cache ./test/",
     "benchmark": "./bin/benchmark.js",
     "prebenchmark": "npm pack"
   },
-  "dependencies": {
-    "punycode": "^2.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.12",
+    "@types/jest": "^23.3.11",
+    "@types/node": "^10.12.18",
     "benchmark": "^2.1.4",
-    "concurrently": "^4.1.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.10.0",
+    "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
     "google-closure-compiler": "^20181210.0.0",
-    "jest": "^23.6.0",
-    "prettier": "^1.15.3",
     "rollup": "^1.0.1",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "eslint-plugin-react": "^7.12.2",
+    "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
   "keywords": [
