--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^10.12.12",
     "benchmark": "^2.1.4",
     "concurrently": "^4.1.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
