Optimizations + comparison with other libraries
* Optimize Trie into a DAWG (size reduction)
* Implement comparison with other libraries
* Implement fast path for valid hostnames as arguments
* Allow to disable hostname parsing and validation using option
* Add tests for corner-cases URLs parsing
* Update README

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "prebuild": "npm run clean",
     "bundle": "rollup -c rollup.config.js",
     "prebundle": "npm run build",
-    "minify": "google-closure-compiler --js=./dist/tldts.umd.js --js_output_file=./dist/tldts.umd.min.js && google-closure-compiler --js=./dist/tldts-experimental.umd.js --js_output_file=./dist/tldts-experimental.umd.min.js",
+    "minify-tldts": "google-closure-compiler --js=./dist/tldts.umd.js --js_output_file=./dist/tldts.umd.min.js",
+    "minify-tldts-experimental": "google-closure-compiler --js=./dist/tldts-experimental.umd.js --js_output_file=./dist/tldts-experimental.umd.min.js",
+    "minify": "npm run minify-tldts && npm run minify-tldts-experimental",
     "preminify": "npm run bundle",
     "prepack": "npm run minify",
     "test": "jest --coverage --no-cache ./test/",
@@ -52,10 +54,10 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "google-closure-compiler": "^20181210.0.0",
-    "rollup": "^1.0.1",
     "eslint-plugin-react": "^7.12.2",
+    "google-closure-compiler": "^20181210.0.0",
     "jest": "^23.6.0",
+    "rollup": "^1.0.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
