--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tldts",
   "description": "Library to work against complex domain names, subdomains and URIs.",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "homepage": "https://github.com/remusao/tldts",
   "author": "Rémi Berson",
   "contributors": [
@@ -42,13 +42,13 @@
     "preminify": "npm run bundle",
     "prepack": "npm run minify",
     "test": "jest --coverage --no-cache ./test/",
-    "benchmark": "./bin/benchmark.js",
+    "benchmark": "make -C bench",
     "prebenchmark": "npm pack"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^24.0.0",
-    "@types/node": "^11.9.3",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.0",
     "benchmark": "^2.1.4",
     "coveralls": "^3.0.2",
     "eslint": "^5.11.1",
@@ -57,8 +57,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.2",
     "google-closure-compiler": "^20190215.0.1",
-    "jest": "^24.1.0",
-    "rollup": "^1.0.2",
+    "jest": "^24.3.1",
+    "rollup": "^1.6.0",
     "ts-jest": "^24.0.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
