--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,6 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-[*.{es,js,json,jsm,jsx}]
+[*.{es,js,json,jsm,jsx,ts}]
 indent_style = space
 indent_size = 2
