--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,25 @@
     "outDir": "build",
     "lib": ["ES6"],
     "moduleResolution": "Node",
-    "removeComments": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "alwaysStrict": false,
+    "downlevelIteration": false,
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "keyofStringsOnly": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "downlevelIteration": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strict": true
+    "removeComments": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true
   },
   "files": [
     "./tldts.ts",
