--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-node_modules
-coverage
-build
-dist
+node_modules/
+
+packages/*/build/
+packages/*/dist/
+packages/*/node_modules/
+packages/*/coverage/
+
+bench/requests.json
