--- a/package.json
+++ b/package.json
@@ -1,78 +1,31 @@
 {
-  "name": "tldts",
-  "description": "Library to work against complex domain names, subdomains and URIs.",
-  "version": "5.1.0",
-  "homepage": "https://github.com/remusao/tldts",
-  "author": "Rémi Berson",
-  "contributors": [
-    "Thomas Parisot (https://oncletom.io)"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/remusao/tldts.git"
-  },
+  "private": true,
+  "license": "MIT",
+  "homepage": "https://github.com/remusao/tldts#readme",
   "bugs": {
     "url": "https://github.com/remusao/tldts/issues"
   },
-  "engines": {
-    "node": ">= 6"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:remusao/tldts.git"
   },
-  "browser": "dist/tldts.umd.min.js",
-  "main": "dist/tldts.cjs.min.js",
-  "module": "dist/tldts.esm.min.js",
-  "types": "dist/tldts.d.ts",
-  "files": [
-    "dist",
-    "lib",
-    "tldts.ts",
-    "tldts-experimental.ts"
+  "workspaces": [
+    "./packages/*"
   ],
-  "license": "MIT",
-  "bin": {
-    "tldts": "bin/cli.js"
-  },
   "scripts": {
-    "clean": "rm -rfv dist build",
-    "lint": "tslint -c tslint.json 'lib/**/*.ts'",
-    "update": "git submodule foreach git pull origin master && ts-node -O '{\"module\": \"commonjs\"}' ./bin/update.ts",
-    "build": "tsc -p .",
-    "prebuild": "npm run clean",
-    "bundle": "rollup -c rollup.config.ts",
-    "prebundle": "npm run build",
-    "prepack": "npm run bundle",
-    "test": "jest --coverage --no-cache ./test/",
-    "pretest": "npm pack",
-    "benchmark": "make -C bench",
-    "prebenchmark": "npm pack"
+    "bootstrap": "npx lerna bootstrap",
+    "bundle": "lerna run --concurrency 1 bundle",
+    "clean": "lerna run --parallel clean && lerna clean --yes && rimraf node_modules",
+    "lint": "lerna run --parallel lint",
+    "prepublish": "yarn run lint",
+    "test": "lerna run --concurrency 1 test",
+    "bench": "make -C bench",
+    "update": "git submodule foreach git pull origin master && ts-node -O '{\"module\": \"commonjs\"}' ./bin/update.ts"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "^0.9.0",
-    "@types/jest": "^24.0.12",
-    "@types/node": "^12.0.2",
     "benchmark": "^2.1.4",
-    "chalk": "^2.4.2",
-    "coveralls": "^3.0.3",
-    "jest": "^24.8.0",
-    "rollup": "^1.11.3",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
-  },
-  "keywords": [
-    "tld",
-    "sld",
-    "domain",
-    "subdomain",
-    "subdomain",
-    "hostname",
-    "browser",
-    "uri",
-    "url",
-    "domain name",
-    "public suffix",
-    "url parsing",
-    "typescript"
-  ]
+    "lerna": "^3.15.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
+  }
 }
