update project structure
* speed-up build using composite mode for TypeScript
* fix source maps generation
* make sure tslib does not appear in build artifacts

--- a/packages/tldts-core/tsconfig.json
+++ b/packages/tldts-core/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "declarationDir": "build/types",
-    "outDir": "build"
+    "composite": true,
+    "declarationDir": "dist/types",
+    "outDir": "dist/es6"
   },
   "include": [
-    "src/**/*.ts"
-  ],
-  "files": [
-    "./index.ts"
+    "src/**/*.ts",
+    "index.ts"
   ]
 }
