--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "sourceMap": true,
     "target": "ES3",
-    "lib": ["es2015", "ES6", "DOM"],
+    "lib": [
+      "es2015",
+      "es2017",
+      "dom"
+    ],
+    "allowJs": false,
     "esModuleInterop": true,
     "moduleResolution": "Node",
+    "module": "esnext",
     "importHelpers": true,
     "downlevelIteration": true,
     "allowUnreachableCode": false,
@@ -18,9 +25,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strict": true,
-    "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
