--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node: [10, 12, 13]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v1
@@ -44,6 +44,3 @@ jobs:
 
       - name: Test
         run: yarn test
-
-      - name: Bundle
-        run: npx metalint --ci
