Migrate from jest to mocha + chai

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Bootstrap
         run: yarn bootstrap
 
+      - name: Build
+        run: yarn build
+
       - name: Bundle
         run: yarn bundle
 
