--- a/packages/tldts-core/package.json
+++ b/packages/tldts-core/package.json
@@ -45,20 +45,21 @@
     "clean": "rimraf dist",
     "lint": "tslint --config ../../tslint.json --project ./tsconfig.json",
     "build": "tsc --build ./tsconfig.json",
-    "bundle": "rollup --config ./rollup.config.ts",
-    "prebundle": "yarn run build",
+    "bundle": "tsc --build ./tsconfig.bundle.json && rollup --config ./rollup.config.ts",
     "prepack": "yarn run bundle",
-    "test": "jest --config ./jest.config.js ./test/"
+    "test": "nyc mocha --config ../../.mocharc.js"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.0",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.1.0",
-    "jest": "^25.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
     "rimraf": "^3.0.0",
     "rollup": "^2.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "rollup-plugin-sourcemaps": "^0.5.0",
-    "ts-jest": "^25.0.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.2"
