--- a/packages/tldts/tsconfig.json
+++ b/packages/tldts/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "composite": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist/es6"
+    "outDir": "dist/cjs",
+    "declarationDir": "dist/types"
   },
   "references": [
     {
@@ -14,7 +14,7 @@
     }
   ],
   "include": [
-    "src/**/*.ts",
-    "index.ts"
+    "./src/**/*.ts",
+    "./index.ts"
   ]
 }
