--- a/packages/tldts/package.json
+++ b/packages/tldts/package.json
@@ -53,7 +53,6 @@
     "test": "nyc mocha --config ../../.mocharc.js"
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "^0.26.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^8.0.0",
@@ -64,6 +63,7 @@
     "rimraf": "^3.0.0",
     "rollup": "^2.0.0",
     "rollup-plugin-sourcemaps": "^0.6.1",
+    "rollup-plugin-terser": "^7.0.2",
     "tldts-tests": "^5.6.85",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
