--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [10, 12, 13]
+        node: [10, 12, 14, 15]
         os: [ubuntu-latest]
 
     steps:
