--- a/.github/workflows/psl.yml
+++ b/.github/workflows/psl.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN_BOT }}
+          token: ${{ secrets.CREATE_PULL_REQUEST_TOKEN }}
           commit-message: "Update upstream public suffix list"
           title: "Update upstream public suffix list"
           body: "Automated update of upstream public suffix list"
