Include 'src' folder as part of published packages

--- a/packages/tldts/package.json
+++ b/packages/tldts/package.json
@@ -39,7 +39,8 @@
   "module": "dist/es6/index.js",
   "types": "dist/types/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "bin": {
     "tldts": "bin/cli.js"
