--- a/packages/tldts/package.json
+++ b/packages/tldts/package.json
@@ -50,20 +50,21 @@
     "clean": "rimraf dist coverage",
     "lint": "tslint --config ../../tslint.json --project ./tsconfig.json",
     "build": "tsc --build ./tsconfig.json",
-    "bundle": "tsc --build ./tsconfig.bundle.json && rollup --config ./rollup.config.ts",
+    "bundle": "tsc --build ./tsconfig.bundle.json && rollup --config ./rollup.config.ts --configPlugin typescript",
     "prepack": "yarn run bundle",
     "test": "nyc mocha --config ../../.mocharc.js"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.1",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
     "chai": "^4.2.0",
-    "mocha": "^10.0.0",
+    "mocha": "^10.1.0",
     "nyc": "^15.0.1",
     "rimraf": "^3.0.0",
-    "rollup": "^2.50.4",
+    "rollup": "^3.2.3",
     "rollup-plugin-sourcemaps": "^0.6.1",
     "rollup-plugin-terser": "^7.0.2",
     "tldts-tests": "^5.7.97",
