--- a/packages/tldts/package.json
+++ b/packages/tldts/package.json
@@ -64,9 +64,9 @@
     "mocha": "^10.1.0",
     "nyc": "^15.0.1",
     "rimraf": "^4.1.2",
-    "rollup": "^3.2.3",
+    "rollup": "^3.17.3",
     "rollup-plugin-sourcemaps": "^0.6.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "tldts-tests": "^5.7.109",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
