tooling: migrate to eslint + TypeScript v5 + prettier

--- a/packages/tldts-core/tsconfig.json
+++ b/packages/tldts-core/tsconfig.json
@@ -5,8 +5,5 @@
     "outDir": "dist/cjs",
     "declarationDir": "dist/types"
   },
-  "include": [
-    "./src/**/*.ts",
-    "./index.ts"
-  ]
+  "include": ["./src/**/*.ts", "./index.ts"]
 }
