--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "watch": "tsc --build ./tsconfig.project.json --watch",
     "bundle": "lerna run --concurrency 2 bundle",
     "clean": "lerna run --parallel clean && lerna clean --yes && rimraf node_modules",
-    "lint": "lerna run --parallel lint",
+    "lint": "eslint --config .eslintrc.cjs .",
     "test": "lerna run --concurrency 2 test",
     "bench": "make -C bench",
     "update": "git submodule foreach git pull origin master && ts-node -O '{\"module\": \"commonjs\"}' ./bin/update.ts",
@@ -49,11 +49,14 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "auto": "^10.29.2",
     "benchmark": "^2.1.4",
+    "eslint": "^8.36.0",
     "lerna": "^6.0.1",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "typescript": "^5.0.2"
   },
   "auto": {
     "name": "Rémi Berson",
