--- a/packages/tldts-core/package.json
+++ b/packages/tldts-core/package.json
@@ -45,11 +45,13 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "lint": "tslint --config ../../tslint.json --project ./tsconfig.json",
     "build": "tsc --build ./tsconfig.json",
     "bundle": "tsc --build ./tsconfig.bundle.json && rollup --config ./rollup.config.ts --configPlugin typescript",
     "prepack": "yarn run bundle",
     "test": "nyc mocha --config ../../.mocharc.js"
+  },
+  "overrides": {
+    "@rollup/pluginutils": "^5.0.2"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -63,8 +65,6 @@
     "rimraf": "^4.1.2",
     "rollup": "^3.17.3",
     "rollup-plugin-sourcemaps": "^0.6.1",
-    "tslint": "^6.0.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.3.2"
+    "typescript": "^5.0.2"
   }
 }
