Simplify tests and internalize parsing utils

--- a/tsconfig.project.json
+++ b/tsconfig.project.json
@@ -12,6 +12,9 @@
     },
     {
       "path": "./packages/tldts-experimental/tsconfig.json"
+    },
+    {
+      "path": "./packages/tldts-utils/tsconfig.json"
     }
   ]
 }
