--- a/packages/tldts-utils/package.json
+++ b/packages/tldts-utils/package.json
@@ -1,27 +1,12 @@
 {
-  "name": "tldts-core",
+  "name": "tldts-utils",
   "version": "6.0.2",
-  "description": "tldts core primitives (internal module)",
+  "description": "tldts internal utils (internal module)",
   "author": {
     "name": "Rémi Berson"
   },
   "contributors": [
-    "Alexei <alexeiatyahoodotcom@gmail.com>",
-    "Alexey <kureev-mail@ya.ru>",
-    "Andrew <chefandrew@seomoz.org>",
-    "Johannes Ewald <johannes.ewald@peerigon.com>",
-    "Jérôme Desboeufs <jerome.desboeufs@gmail.com>",
-    "Kelly Campbell <kelly.a.campbell@gmail.com>",
-    "Kiko Beats <josefrancisco.verdu@gmail.com>",
-    "Kris Reeves <krisreeves@searchfanatics.com>",
-    "Krzysztof Jan Modras <chrmod@chrmod.net>",
-    "Olivier Melcher <olivier.melcher@gmail.com>",
-    "Rémi Berson <remi.berson@pm.me>",
-    "Saad Rashid <srashid@lendinghome.com>",
-    "Thomas Parisot <hi@oncletom.io>",
-    "Timo Tijhof <krinklemail@gmail.com>",
-    "Xavier Damman <xdamman@gmail.com>",
-    "Yehezkiel Syamsuhadi <yehezkielbs@gmail.com>"
+    "Rémi Berson <remi.berson@pm.me>"
   ],
   "publishConfig": {
     "access": "public"
@@ -35,14 +20,14 @@
     "type": "git",
     "url": "git+ssh://git@github.com/remusao/tldts.git"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/es6/index.js",
-  "types": "dist/types/index.d.ts",
   "files": [
     "dist",
     "src",
     "index.ts"
   ],
+  "bin": {
+    "tldts-update-internal": "bin/update.js"
+  },
   "scripts": {
     "clean": "rimraf dist",
     "build": "tsc --build ./tsconfig.json",
@@ -53,11 +38,10 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@types/chai": "^4.2.18",
+    "@types/chai": "^4.2.11",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.15.11",
     "chai": "^4.2.0",
-    "mocha": "^10.1.0",
     "nyc": "^15.0.1",
     "rimraf": "^4.4.1",
     "rollup": "^3.20.2",
