--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
   "npmClient": "yarn",
-  "useWorkspaces": true,
-  "version": "6.0.11"
+  "version": "6.0.11",
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
