--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "npmClient": "yarn",
   "version": "6.0.11",
+  "useWorkspaces": true,
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
