Drop Node.js 16 from CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [16, 18, 20]
+        node: [18, 20]
         os: [ubuntu-latest]
 
     steps:
