--- a/packages/tldts-utils/package.json
+++ b/packages/tldts-utils/package.json
@@ -36,12 +36,16 @@
     "prepack": "yarn run bundle",
     "test": "nyc mocha --config ../../.mocharc.js"
   },
+  "dependencies": {
+    "punycode": "^2.3.1"
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.2.3",
+    "@types/punycode": "^2.1.3",
     "chai": "^4.2.0",
     "nyc": "^15.0.1",
     "rimraf": "^5.0.1",
