--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "packages/*"
   ],
   "scripts": {
-    "bootstrap": "yarn install --frozen-lock && lerna bootstrap",
+    "bootstrap": "yarn install --frozen-lock",
     "build": "tsc --build ./tsconfig.project.json && lerna run build",
     "watch": "tsc --build ./tsconfig.project.json --watch",
     "bundle": "lerna run --concurrency 2 bundle",
@@ -54,7 +54,7 @@
     "auto": "^11.1.1",
     "benchmark": "^2.1.4",
     "eslint": "^8.45.0",
-    "lerna": "^6.6.2",
+    "lerna": "^8.1.2",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.4"
   },
