--- a/packages/tldts-icann/package.json
+++ b/packages/tldts-icann/package.json
@@ -48,7 +48,7 @@
     "build": "tsc --build ./tsconfig.json",
     "bundle": "tsc --build ./tsconfig.bundle.json && rollup --config ./rollup.config.mjs",
     "prepack": "yarn run bundle",
-    "test": "nyc mocha --config ../../.mocharc.js"
+    "test": "nyc mocha --config ../../.mocharc.cjs"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -57,7 +57,7 @@
     "@types/chai": "^4.2.18",
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.2.3",
-    "chai": "^4.2.0",
+    "chai": "^4.4.1",
     "mocha": "^10.1.0",
     "nyc": "^15.0.1",
     "rimraf": "^5.0.1",
