--- a/packages/tldts-utils/package.json
+++ b/packages/tldts-utils/package.json
@@ -34,7 +34,7 @@
     "build": "tsc --build ./tsconfig.json",
     "bundle": "tsc --build ./tsconfig.bundle.json && rollup --config ./rollup.config.ts --configPlugin typescript",
     "prepack": "yarn run bundle",
-    "test": "nyc mocha --config ../../.mocharc.js"
+    "test": "nyc mocha --config ../../.mocharc.cjs"
   },
   "dependencies": {
     "punycode": "^2.3.1"
@@ -46,7 +46,7 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.2.3",
     "@types/punycode": "^2.1.3",
-    "chai": "^4.2.0",
+    "chai": "^4.4.1",
     "nyc": "^15.0.1",
     "rimraf": "^5.0.1",
     "rollup": "^4.1.0",
